--- a/external/storm-async-http/pom.xml
+++ b/external/storm-async-http/pom.xml
@@ -79,7 +79,7 @@
         </dependency>
     </dependencies>
 
-    <build>
+    <!--build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -101,7 +101,7 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>
+    </build-->
 
 
 </project>
